--- a/web/index.html
+++ b/web/index.html
@@ -55,5 +55,28 @@
       });
     });
   </script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyCvQrkYtbgf4Y1FBc_WDTruO50I9XMFeWI",
+      authDomain: "wares-af478.firebaseapp.com",
+      projectId: "wares-af478",
+      storageBucket: "wares-af478.appspot.com",
+      messagingSenderId: "1032243099612",
+      appId: "1:1032243099612:web:abc559b1d2280d5fb04119",
+      measurementId: "G-WRM7TWWEFH"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 </body>
 </html>
